# GameServer

./: console.sh  readme.md  start.sh
GameClient/: CMakeLists.txt
GameClient/proto/: update_proto.sh
GameClient/proto/input/: login.proto  person.proto
GameClient/src/: CMakeLists.txt  gameSocket.cpp  main.cpp  protocol.cpp
GameClient/src/include/: gameSocket.h  protocol.h  test.h
db/: game.sql  template.sql
etc/: config.node1  config.node2  runconfig.lua
game/: chat_main.lua  config.path  config_chat  config_echo  echo_main.lua
luaclib_src/lua-cjson/: .Makefile.swp  .lua_cjson.c.swp  Makefile
lualib/: load_protocol.lua  service.lua  utils.lua
proto/: complie_pb.sh
proto/input/: login.proto  person.proto  scene.proto  work.proto
proto/output/: login.pb  person.pb  scene.pb  work.pb
service/: main.lua  message_board.lua  ping_main.lua  ping_service.lua  testproto.lua  testproto2.lua
service/agent/: init.lua  scene.lua  work.lua
service/agentmgr/: init.lua
service/gateway/: init.lua
service/login/: client.lua  init.lua
service/nodemgr/: init.lua
service/scene/: init.lua
skynet/3rd/lua/: lua  luac
skynet/examples/: PingConfig  agent.lua  main_ping.lua  ping.lua
test/: .test.lua.swp  test.lua  test_db.lua  test_json.lua
